[gd_scene load_steps=5 format=3 uid="uid://drjm3l4qg8tvx"]

[ext_resource type="Texture2D" uid="uid://b7y0mfaq5qxme" path="res://StartMenu/startMenuPic.png" id="1_ds48x"]
[ext_resource type="FontFile" uid="uid://ceupvxrwqcxvb" path="res://Fonts/nulshock bd.otf" id="2_dmt0x"]
[ext_resource type="Script" path="res://StartMenu/ItemList.gd" id="3_n1eof"]
[ext_resource type="AudioStream" uid="uid://cvq0yqtg20i6w" path="res://Music/UI_Select_chime.wav" id="4_3owfl"]

[node name="StartMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ds48x")
expand_mode = 1

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 173.0
offset_right = 837.0
offset_bottom = 545.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(0.2, 0.870588, 0, 1)
theme_override_colors/font_selected_color = Color(0.2, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("2_dmt0x")
theme_override_font_sizes/font_size = 32
item_count = 3
item_0/text = "Join Server"
item_1/text = "Create Account"
item_2/text = "EXIT"
script = ExtResource("3_n1eof")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="ItemList"]
initial_position = 1
size = Vector2i(770, 288)
dialog_text = "By joining a server you are agreeing to the following
- I am 18 years old or older
- I understand the risks of joining someone elses server. These risks include but are not limited to:
  * exposure of my public IP address (if not using a VPN)
  * loss of uploaded assets

By clicking OK you agree to all the statements above.

  "

[node name="UISelectAudio" type="AudioStreamPlayer" parent="ItemList"]
stream = ExtResource("4_3owfl")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 274.0
offset_top = 67.0
offset_right = 875.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dmt0x")
theme_override_font_sizes/font_size = 64
text = "Godot Online"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_clicked" from="ItemList" to="ItemList" method="_on_item_clicked"]
